kubernetes/apps/media/jellyfin/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
subsets:
- addresses:
  - ip: ${SECRET_JELLYFIN_IP}
  ports:
  - name: http
    port: 8096
    protocol: TCP
