kubernetes/apps/media/jellyfin/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8096
  sessionAffinity: None
  type: ClusterIP
