kubernetes/apps/media/jellyfin/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
  - host: &host jellyfin.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - *host
